8200109: NMT: diff_malloc_site assert(early->flags() == current->flags(), "Must be the same memory type")

Reviewed-by: shade, coleenp